--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,7 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Design of a Concentrated Solar Power Plant using Parabolic Trough Collectors (PTC)"
+excerpt: "[Link to details](https://kashifliaqat.github.io/publication/2018-09-01-CSP1) <br/><img src='/images/PTC.jpg'><img src='/images/CSP.jpg'>"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+
