--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "Design of a Concentrated Solar Power Plant using Parabolic Trough Collectors (PTC)"
-excerpt: "[Link to details](https://kashifliaqat.github.io/publication/2018-09-01-CSP1) <br/><img src='/images/PTC.png'><img src='/images/CSP.png'>"
+excerpt: "[Link to details](https://kashifliaqat.github.io/publication/2018-09-01-CSP1) <br/><img src='/images/CSP.png'>"
 collection: portfolio
 ---
 
