--- a/_portfolio/portfolio-3.html
+++ b/_portfolio/portfolio-3.html
@@ -1,9 +1,7 @@
 ---
 title: "Design of a Concentrated Solar Power Plant using Parabolic Trough Collectors (PTC)"
-excerpt: "[Link to details](https://kashifliaqat.github.io/publication/2018-09-01-CSP1) <br/><iframe width="420" height="315"
-src="https://www.youtube.com/embed/AkiayL7O-GU">
-</iframe>"
+excerpt: "<iframe width="420" height="315"src="https://www.youtube.com/embed/AkiayL7O-GU"></iframe>"
 collection: portfolio
 ---
-
+"<iframe width="420" height="315"src="https://www.youtube.com/embed/AkiayL7O-GU"></iframe>"
 [Link to details](https://kashifliaqat.github.io/publication/2018-09-01-CSP1)
