--- a/_portfolio/portfolio-3.html
+++ b/_portfolio/portfolio-3.html
@@ -1,6 +1,6 @@
 ---
 title: "Ultrasonic Radar System"
-excerpt: "Arduino based radar system for object detection. <br/><iframe width="420" height="315" src="https://www.youtube.com/embed/AkiayL7O-GU"></iframe>"
+excerpt: "<iframe width="420" height="315" src="https://www.youtube.com/embed/AkiayL7O-GU"></iframe>"
 collection: portfolio
 ---
 <iframe width="420" height="315" src="https://www.youtube.com/embed/AkiayL7O-GU"></iframe>
