--- a/_portfolio/portfolio-3.html
+++ b/_portfolio/portfolio-3.html
@@ -1,7 +1,7 @@
 ---
-title: "Ultrasonic Radar System"
-excerpt: "<iframe width="420" height="315" src="https://www.youtube.com/embed/AkiayL7O-GU"></iframe>"
+title: "Arduino Based Ultrasonic Radar System"
+excerpt: <iframe width="100" height="80" src="https://www.youtube.com/embed/AkiayL7O-GU"></iframe>
 collection: portfolio
 ---
-<iframe width="420" height="315" src="https://www.youtube.com/embed/AkiayL7O-GU"></iframe>
+<iframe width="200" height="150" src="https://www.youtube.com/embed/AkiayL7O-GU"></iframe>
 
