--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -10,7 +10,7 @@ redirect_from:
 {% include base_path %}
 [Download PDF](https://github.com/kashifliaqat/kashifliaqat.github.io/raw/master/files/Kashif_s_Resume.pdf)
 
-<iframe src="https://github.com/kashifliaqat/kashifliaqat.github.io/raw/master/files/Kashif_s_Resume.pdf" width="100%" height="500px">
+<iframe src="http://docs.google.com/gview?url=https://github.com/kashifliaqat/kashifliaqat.github.io/raw/master/files/Kashif_s_Resume.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
 
 
 
