--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -10,7 +10,7 @@ redirect_from:
 {% include base_path %}
 [Download PDF](https://github.com/kashifliaqat/kashifliaqat.github.io/raw/master/files/Kashif_s_Resume.pdf)
 
-<iframe id="iframepdf" src="new.pdf" height="700" width="600" ></iframe>
+<iframe id="iframepdf" src="https://github.com/kashifliaqat/kashifliaqat.github.io/blob/master/_pages/new.pdf" height="700" width="600" ></iframe>
 
 
 
