--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -12,7 +12,12 @@ redirect_from:
 
 <iframe id="iframepdf" src="https://github.com/kashifliaqat/kashifliaqat.github.io/blob/master/_pages/new.pdf" height="700" width="600" ></iframe>
 
-
+<iframe src="http://docs.google.com/gview?url=https://github.com/kashifliaqat/kashifliaqat.github.io/blob/master/_pages/new.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+<object data="https://github.com/kashifliaqat/kashifliaqat.github.io/blob/master/_pages/new.pdf" type="application/pdf" width="750px" height="750px">
+    <embed src="https://github.com/kashifliaqat/kashifliaqat.github.io/blob/master/_pages/new.pdf" type="application/pdf">
+        <p>This browser does not support PDFs. Please download the PDF to view it: <a href="https://github.com/kashifliaqat/kashifliaqat.github.io/blob/master/_pages/new.pdf">Download PDF</a>.</p>
+    </embed>
+</object>
 
 
 ## Publications
