--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -10,11 +10,11 @@ redirect_from:
 {% include base_path %}
 [Download PDF](https://github.com/kashifliaqat/kashifliaqat.github.io/raw/master/files/Kashif_s_Resume.pdf)
 
-<iframe id="iframepdf" src="https://github.com/kashifliaqat/kashifliaqat.github.io/blob/master/_pages/new.pdf" height="700" width="600" ></iframe>
 
-<iframe src="http://docs.google.com/gview?url=https://github.com/kashifliaqat/kashifliaqat.github.io/blob/master/_pages/new.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
-<object data="https://github.com/kashifliaqat/kashifliaqat.github.io/blob/master/_pages/new.pdf" type="application/pdf" width="750px" height="750px">
-    <embed src="https://github.com/kashifliaqat/kashifliaqat.github.io/blob/master/_pages/new.pdf" type="application/pdf">
+
+<iframe src="http://docs.google.com/gview?url=new.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+<object data="new.pdf" type="application/pdf" width="750px" height="750px">
+    <embed src="new.pdf" type="application/pdf">
         <p>This browser does not support PDFs. Please download the PDF to view it: <a href="https://github.com/kashifliaqat/kashifliaqat.github.io/blob/master/_pages/new.pdf">Download PDF</a>.</p>
     </embed>
 </object>
